# sasso

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  rustfmt.toml
.antigravitycli/: 92e52c5f-358f-49e5-932c-fab32ef84d5f.json
.github/workflows/: ci.yml  codspeed.yml  release-c-api.yml  release-crate.yml  release-source.yml  release-wasm.yml  release.yml  spec-canary.yml
bench/: .gitignore  README.md  dart_vs_grass.md  three_way.md
bench/asyncify/: README.md  ab-compare.mjs  asyncify-bench-one.mjs  concurrent-bench.mjs  corpus-bench.mjs  real-corpus-bench.mjs  sasso-instrumented.cjs  suspension-bench.mjs
bench/asyncify/lib/: harness.mjs
bench/corpus/batch/: file_24.scss
bench/corpus/handwritten/: main.scss
bench/corpus/handwritten/partials/: _mixins.scss  _variables.scss
bench/corpus/modular/: MANIFEST.json  _mixins.scss  _section1.scss  _section2.scss  _section3.scss  _section4.scss  _section5.scss  _section6.scss  _variables.scss  entry_01.scss  entry_02.scss  entry_03.scss  entry_04.scss  entry_05.scss  entry_06.scss  entry_07.scss  entry_08.scss  entry_09.scss  entry_10.scss
bench/corpus/modular/components/: _c1_1.scss  _c1_2.scss  _c1_3.scss  _c1_4.scss  _c1_5.scss  _c2_1.scss  _c2_2.scss  _c2_3.scss  _c2_4.scss  _c2_5.scss  _c3_1.scss  _c3_2.scss  _c3_3.scss  _c3_4.scss  _c3_5.scss  _c4_1.scss  _c4_2.scss  _c4_3.scss  _c4_4.scss  _c4_5.scss  _c5_1.scss  _c5_2.scss  _c5_3.scss  _c5_4.scss  _c5_5.scss  _c6_1.scss  _c6_2.scss  _c6_3.scss  _c6_4.scss  _c6_5.scss
bench/grass_runner/: Cargo.toml
bench/grass_runner/src/: main.rs
bench/real-world/: .gitignore  package-lock.json  package.json  projects.json  real_world.md  run.mjs
bench/scripts/: canon_css.py  gen_corpus.rb  gen_modular_corpus.mjs  normalize_css.sh  run_bench.sh
benches/: compile.rs
docs/: AGENT_WORKFLOW.md  ASYNC_PERF_ARCHITECTURE.md  CONFORMANCE_ROADMAP.md  CUSTOM_FUNCTIONS_COMPAT.md  GRASS_LANDSCAPE.md  HANDOFF_ASYNC_IMPORTER_PERF.md  IMPORTER_REDESIGN.md  NPM_BARE_NAME_PLAN.md  REFACTOR_NEXT.md  REFACTOR_PLAN.md  RUBY_GEM_PLAN.md
examples/: arena_concurrency.rs  compile.rs
ffi/: .gitignore  Cargo.toml  README.md
ffi/examples/: .gitignore  README.md  example.php  importer.py  smoke.py
ffi/examples/bun/: test.ts
ffi/examples/c/: test.c
ffi/examples/csharp/: Program.cs  sasso-csharp.csproj
ffi/examples/deno/: test.ts
ffi/examples/go/: go.mod  main.go  shim.c  shim.h
ffi/examples/luajit/: test.lua
ffi/examples/ruby/: test.rb
ffi/examples/swift/: module.modulemap  test.swift
ffi/include/: sasso.h
ffi/src/: lib.rs
napi/: Cargo.toml  build.sh  make-platform-package.mjs  test.mjs
napi/npm/: index.mjs  package.json
napi/src/: lib.rs
spec/: BASELINE.json  FORMAT.md  REPORT.md  SPEC_VERSION.txt  STDERR_METRIC.md  check_baseline.py  dartsass.sh  diffstat.py  fetch.sh  quick_diff.py  regress.py  run_spec.py  sass-spec
spec/sample-spec/dir-style/error-undefined-var/: error  input.scss
spec/sample-spec/dir-style/nesting/: input.scss  output.css
spec/sample-spec/hrx-style/: comment-trim.hrx  math.hrx  nested-cases.hrx
src/: arena.rs  ast.rs  builtins.rs  deprecation.rs  diag.rs  emit.rs  error.rs  eval.rs  fdlibm.rs  fxhash.rs  host_fn.rs  importer.rs  lib.rs  main.rs  musl_math.rs  musl_math_tables.rs  parser.rs  ryu.rs  ryu_tables.rs  sass_parser.rs  scanner.rs  selector.rs  sourcemap.rs  value.rs
src/builtins/: color.rs  color_ext.rs  colorspace.rs  colorspace_matrices.rs  list.rs  map.rs  math.rs  meta.rs  mod.rs  selector.rs  string.rs
src/builtins/color/: legacy.rs  math.rs  mod.rs  modern.rs
src/eval/: at_rules.rs  binop.rs  calc.rs  control_flow.rs  expr.rs  meta.rs  mod.rs  modules.rs  plain_css.rs  scope.rs
src/parser/: at_rules.rs  control_flow.rs  mod.rs  statements.rs  value.rs
src/selector/: mod.rs  parse.rs
tests/: arena_threads.rs  cli_sourcemap.rs  diagnostics.rs  integration.rs  parity.rs  sourcemap.rs
tests/fixtures/diagnostics/: .gitattributes  EXIT-CODES.txt  README.md  _imported.scss  _libchain.scss  _liberr3.scss  compile-bad-argument.ascii.stderr  compile-bad-argument.scss  compile-bad-argument.stderr  compile-bad-selector.ascii.stderr  compile-bad-selector.stderr  compile-expected-semicolon.ascii.stderr  compile-expected-semicolon.scss  compile-expected-semicolon.stderr  compile-gutter-alignment.ascii.stderr  compile-gutter-alignment.scss  compile-gutter-alignment.stderr  compile-import-chain.ascii.stderr  compile-import-chain.scss  compile-import-chain.stderr  compile-tab-expansion.ascii.stderr  compile-tab-expansion.scss  compile-tab-expansion.stderr  compile-undefined-operation.ascii.stderr  compile-undefined-operation.scss  compile-undefined-operation.stderr  compile-undefined-variable-stack.ascii.stderr  compile-undefined-variable-stack.scss  compile-undefined-variable-stack.stderr  compile-undefined-variable.ascii.stderr  compile-undefined-variable.scss  compile-undefined-variable.stderr  debug-string.scss  debug-string.stderr  debug-values.scss  debug-values.stderr  deprecation-abs-percent.ascii.stderr  deprecation-abs-percent.scss  deprecation-abs-percent.stderr  deprecation-bogus-combinators.ascii.stderr  (+61 more)
wasm/: .gitignore  Cargo.toml  build.sh  test.mjs
wasm/npm/: README.md  _immutable.mjs  _importer.mjs  _loader.mjs  _value.mjs  cli.mjs  native.d.ts  native.mjs  package.json  sasso.d.ts  sasso.mjs  sasso.speed.d.ts  sasso.speed.mjs
wasm/src/: lib.rs
