[package]
name = "sasso"
version = "0.8.1"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
description = "A pure-Rust SCSS to CSS compiler (a dart-sass alternative). Zero dependencies, wasm-friendly, embeddable as a library and usable as a CLI."
repository = "https://github.com/momiji-rs/sasso"
documentation = "https://docs.rs/sasso"
readme = "README.md"
keywords = ["sass", "scss", "css", "compiler", "wasm"]
categories = ["compilers", "web-programming"]
# Keep the published crate lean: ship only the library, binary, examples,
# tests, licenses and README — not the conformance harness, benchmarks, or
# analysis docs (those live in the git repo).
exclude = ["/bench", "/spec", "/docs", "/.github", "/wasm", "/ffi"]

[lib]
name = "sasso"
path = "src/lib.rs"

# Default binary, auto-detected from src/main.rs, named `sasso`.
[[bin]]
name = "sasso"
path = "src/main.rs"

# Intentionally zero runtime dependencies: pure std, so the crate is
# trivially wasm32-wasip1 / wasm32-unknown-unknown friendly and embeds
# into a sandbox (rubyrs Tier-1) without pulling a single native -sys
# crate. The whole pipeline (scan -> parse -> eval -> emit) and the CLI
# (a hand-rolled arg parser) are std-only.
[dependencies]

[features]
default = []

[profile.release]
lto = "thin"
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Modern lint posture, expressed in-manifest so every target (lib, bin, tests,
# examples) inherits it and CI/clippy stay consistent. `unsafe_code` is `deny`
# (not `forbid`) so the single audited `arena` module — the scoped bump
# allocator (perf #5), verified by unit tests + Miri — can `#[allow]` it; every
# other module stays unsafe-free.
[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }

# The `sasso` package is its own workspace root. The wasm-export wrapper
# (`/wasm`, a cdylib that needs `unsafe` for its FFI exports) is kept OUT of
# this workspace so the core crate keeps `unsafe_code = "forbid"`.
[workspace]
exclude = ["wasm", "ffi", "napi"]

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.32.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "aarch64-unknown-linux-musl", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Don't emit cargo-dist's own source archive: its filename is hardcoded to the
# generic `source.tar.gz`, which is confusing for downstream packagers (e.g. the
# FreeBSD ports tree). release-source.yml attaches a conventionally-named
# `sasso-<version>.tar.xz` instead.
source-tarball = false
# release.yml is intentionally hand-edited: the tag trigger is narrowed to
# `v[0-9]+...` so the decoupled `npm-v*` line (release-wasm.yml) does NOT fire
# here. Tell `dist plan` not to fail its generated-file freshness check on it.
allow-dirty = ["ci"]

[dev-dependencies]
divan = { version = "5.0.0", package = "codspeed-divan-compat" }

# CodSpeed performance benchmarks for the SCSS -> CSS pipeline. The `divan`
# dependency above is the CodSpeed compatibility layer, which keeps the upstream
# divan API and adds CPU-simulation instrumentation under cargo-codspeed.
[[bench]]
name = "compile"
harness = false
