# The C-ABI (FFI) wrapper: a cdylib/staticlib around `sasso::compile`, exposing
# a stable `extern "C"` surface so ANY language with a C FFI (PHP FFI, Python
# ctypes/cffi, Ruby Fiddle, Go cgo, LuaJIT, …) can drive sasso in-process — one
# ABI, many languages, no per-language native extension.
#
# Like `../wasm`, this lives OUTSIDE the core `sasso` workspace (see
# ../Cargo.toml `[workspace] exclude` / this crate's own empty `[workspace]`):
# the core crate keeps `unsafe_code = "deny"` (locally `#[allow]`-able only in
# its audited arena module), while this thin layer needs the `unsafe` that a raw
# `extern "C"` ABI requires.
#
# Self-contained workspace root: an empty `[workspace]` stops cargo's upward
# manifest walk here, so the crate resolves identically from the main checkout
# and from nested git worktrees.
[workspace]

[package]
name = "sasso-ffi"
# Tracks the bundled core `sasso` compiler version (reported by `sasso_version`).
version = "0.5.3"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
publish = false
description = "C ABI (FFI) wrapper around the sasso pure-Rust SCSS to CSS compiler."

[lib]
# Output artifact is `libsasso.{so,dylib}` (+ `libsasso.a`) — the conventional
# name a C consumer links/loads. The core crate is pulled in under the alias
# `sasso_core` (below) so this crate's own lib name `sasso` doesn't clash.
name = "sasso"
crate-type = ["cdylib", "staticlib"]

[dependencies]
sasso_core = { package = "sasso", path = ".." }

[profile.release]
# Balanced for a callable library. NOTE: `panic` is left at the default
# "unwind" (NOT "abort") on purpose — the ABI relies on `catch_unwind` to keep
# a Rust panic from unwinding across the C boundary (which would be UB).
lto = "thin"
codegen-units = 1
strip = true
